[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
ego-tree = "0.6.2"
ndarray = "0.15.6"
pathfinding = "4.0.0"
intervallum = "1.4.0"
gcollections = "1.5.0"
geo = "0.23.1"
geo-types = "0.7.8"